# aad

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
include/: context.h
src/: main.cpp  th_pool.cpp
src/include/: container_type.h  stack_thread_pool.h  th_pool.h
tests/: testing.cmake
